# vision

./: CMakeLists.txt  center_zone_detection.cpp  center_zone_detection.hpp  dock_zone_detection.cpp  dock_zone_detection.hpp  fisheye_KD  main.cpp  old_algorithm.cpp  position_detection.cpp  position_detection.hpp  predefined_colors.cpp  predefined_colors.hpp  vision.cfg
vision_tools/color_threshold_calibration/: CMakeLists.txt  green_calib.cpp  main.cpp  red_calib.cpp
vision_tools/config_calibration/: CMakeLists.txt  main.cpp
vision_tools/cupsize_calibration/: CMakeLists.txt  main.cpp  vision.cfg
vision_tools/fisheye_calibration/: CMakeLists.txt  main.cpp  script_capture.sh
vision_tools/roi_calibration/: CMakeLists.txt  fisheye_KD  main.cpp
vision_tools/zone_autodetect_poc/: CMakeLists.txt  fisheye_KD  main.cpp
