#####################################
cmake_minimum_required (VERSION 2.8) 
project (raspicam_test)
find_package(raspicam REQUIRED)
find_package(Threads REQUIRED)
find_package(OpenCV REQUIRED core videoio imgcodecs imgproc highgui calib3d aruco)
find_package(Boost COMPONENTS system REQUIRED)
find_library(libconfig config++)
find_library(libpigpiod_if2 pigpiod_if2)
IF  ( OpenCV_FOUND AND raspicam_CV_FOUND)
	MESSAGE(STATUS "COMPILING OPENCV TESTS")
	MESSAGE(STATUS " ${raspicam_CV_LIBS}")
	add_executable (vision main.cpp dock_zone_detection.cpp predefined_colors.cpp center_zone_detection.cpp position_detection.cpp)  
	target_link_libraries (vision ${raspicam_CV_LIBS} opencv_videoio opencv_imgcodecs opencv_imgproc opencv_highgui opencv_calib3d opencv_aruco config++ pigpiod_if2 Threads::Threads  ${Boost_SYSTEM_LIBRARY})
	target_compile_options(vision PUBLIC  $<$<COMPILE_LANGUAGE:CXX>:-O2>)
	configure_file(fisheye_KD fisheye_KD COPYONLY)
	configure_file(vision.cfg vision.cfg COPYONLY)
ELSE()
	MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()
#####################################
